--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         line-height: 32px;
         border: 1px solid #9c27b0;
         text-align: center;
-        transition: .5s ease;
+        transition: all .5s cubic-bezier(0.68, -0.55, 0.27, 1.55);
       }
       #pointer {
         position: absolute;
@@ -46,7 +46,7 @@
         border-right: 4px solid transparent;
         border-bottom: 8px solid red;
 
-        transition: .15s ease;
+        transition: all .5s cubic-bezier(0.680, -0.550, 0.265, 1.550);;
       }
     </style>
     <script src="https://unpkg.com/angular@1.6.1/angular.min.js"></script>
@@ -103,7 +103,7 @@
               $scope.B = i + 1;
 
               angular.element(pointer)
-                .css({left: (35 + 33*$scope.A) + 'px'});
+                .css({left: (36 + 33*$scope.A) + 'px'});
 
               if ($scope.numbersToAnim[$scope.A] > $scope.numbersToAnim[$scope.B]) {
                   var swap = $scope.numbersToAnim[$scope.A];
